@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST happymapper-0.3.2.gem 25600 RMD160 c314c5a9658ee906e1a7994605685afd3312053e SHA1 45713b52dfb0e79e76908a5b65ef81b21e15298b SHA256 2e32acb93dabc76ec1361acf4a9119b73202cadc08e2f3e42d591ce62b140aa2
+DIST happymapper-0.3.2.tgz 25118 RMD160 c4f0326a71fae6d6813877d9f3b7f7477a8ba25f SHA1 ccdb919ee5836c2a3d4c4fd9ac57cf1e479a886a SHA256 ee62e8ab35fa21f30bc19ef5d9d5f13a9d9ed63b2a39529399d3e4d935970d33
+EBUILD happymapper-0.3.2-r1.ebuild 867 RMD160 e476fa0c1dd637970f7fe7c6c042917e29d1dd4d SHA1 c5502486dfee5a23e69000fa91391f91a831c12b SHA256 d2a41e434d1b26f98ae7352979bace17a0b1cc119e1cabefbbe7b6e3bdb19ce5
 EBUILD happymapper-0.3.2.ebuild 599 RMD160 236f534b7413464bd8b6b97bced96cfc1f7bf697 SHA1 28a39c29c08d42423e1302a047114fdb3bc67012 SHA256 d1e106fa1bfbb9c581e2a1dfe35c8fd96d0ab150a283e421ad424ed686ae4c34
-MISC ChangeLog 528 RMD160 7b91912edf7f508d35999c17332e42f0a9a0571f SHA1 6569e6b033ae2ea13af38b237917a3a55a43c638 SHA256 d4598b242e725dd36850619af1e7120f4274b916630729dbae074e0b445f63a0
+MISC ChangeLog 698 RMD160 3c2049bc762c17b56c9b8ebeef69d69c13b3f0a4 SHA1 c889cd27033ebf23f97d6462917f6aa162a61ea1 SHA256 70e34d15662724113ee6cc1c0d088945c398872ea07235c9b9c19dd49b605190
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4lD+cACgkQiIP6VqMIqNdTiQD8DBOwmt3y5qpchSEooKeBY5G+
-J0p2QSNauG+G3QiUvQkA/i+5W8RffyhKgCnW3WwzoHT4orvpFLBOgxf2YzVOV66a
-=tiQY
+iF4EAREIAAYFAk4lEZ0ACgkQiIP6VqMIqNctLgD+KZ69jFM31X1KbDC189S+lhvI
+p/hqaUq/XV3vjy6ikFgA/2CfyiuCuJUpZY24MsZrMHUJ6OQI4/yV0K8XJ4J9H6c8
+=BRCv
 -----END PGP SIGNATURE-----
