@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*happymapper-0.3.2-r1 (19 Jul 2011)
+
+  19 Jul 2011; Hans de Graaff <graaff@gentoo.org> +happymapper-0.3.2-r1.ebuild:
+  Depend on a version of libxml that doesn't crash.
+
   19 Jul 2011; Hans de Graaff <graaff@gentoo.org> -happymapper-0.3.0.ebuild:
   Remove old version.
 
